--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,4 @@ debug=true
 logging.level.org.hibernate.SQL=debug
 spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=create
+jwt_secret = sdsvsdf
